# zope.tal

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  INSTALL.txt  MANIFEST.in  README.rst  README.txt  buildout.cfg  driver.py  dummyengine.py  htmltalparser.py  interfaces.py  ndiff.py  pyproject.toml  runtest.py  setpath.py  setup.cfg  setup.py  taldefs.py  talgenerator.py  talgettext.py  talinterpreter.py  talparser.py  test.py  timer.py  tox.ini  xmlparser.py
.github/workflows/: tests.yml
docs/: conf.py  htmltalparser.rst  index.rst  interfaces.rst  requirements.txt  taldefs.rst  talgenerator.rst  talinterpreter.rst  talparser.rst
src/zope/tal/: alttalgenerator.py  driver.py  dummyengine.py  htmltalparser.py  interfaces.py  ndiff.py  runtest.py  setpath.py  taldefs.py  talgenerator.py  talgettext.py  talinterpreter.py  talparser.py  talutils.py  timer.py  translationcontext.py  xmlparser.py
src/zope/tal/_talinterpreter/: __init__.py  applevel.py  interplevel.py
src/zope/tal/pypy/: HOWTO.txt
src/zope/tal/pypy/test/: __init__.py  check.py
src/zope/tal/talinterpreter/: __init__.py  applevel.py
src/zope/tal/talpypy/talinterpreter/: __init__.py  notes.txt  talinterpreter.py
src/zope/tal/talpypy/test/: __init__.py
src/zope/tal/talpypy/zptest/: __init__.py  appzpt.py  check.py  zpt.py
src/zope/tal/tests/: __init__.py  markbench.py  run.py  test_files.py  test_htmltalparser.py  test_sourcepos.py  test_talgettext.py  test_talinterpreter.py  test_talparser.py  test_xmlparser.py  utils.py
tests/: markbench.py  run.py  test_files.py  test_htmltalparser.py  test_sourcepos.py  test_talgettext.py  test_talinterpreter.py  test_xmlparser.py  utils.py
tests/input/: acme_template.pt  test24.html  test29.html  test34.html  test_metal9.html
tests/output/: test16.xml  test24.html  test29.html  test34.html  test_metal9.html  test_sa2.html  test_sa2.xml
